// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdk stack creation for place index service creates place index policy for Authorized and Guest users access type 1`] = `
Object {
  "Outputs": Object {
    "Name": Object {
      "Value": Object {
        "Ref": "PlaceIndex",
      },
    },
  },
  "Parameters": Object {
    "authRoleName": Object {
      "Type": "String",
    },
    "dataProvider": Object {
      "Type": "String",
    },
    "dataSourceIntendedUse": Object {
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
    "indexName": Object {
      "Type": "String",
    },
    "pricingPlan": Object {
      "Type": "String",
    },
    "unauthRoleName": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "PlaceIndex": Object {
      "Properties": Object {
        "DataSource": Object {
          "Ref": "dataProvider",
        },
        "DataSourceConfiguration": Object {
          "IntendedUse": Object {
            "Ref": "dataSourceIntendedUse",
          },
        },
        "IndexName": Object {
          "Ref": "indexName",
        },
        "PricingPlan": Object {
          "Ref": "pricingPlan",
        },
      },
      "Type": "AWS::Location::PlaceIndex",
    },
    "PlaceIndexPolicy": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "geo:SearchPlaceIndexForPosition",
                "geo:SearchPlaceIndexForText",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PlaceIndex",
                  "IndexArn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Ref": "indexName",
              },
              "Policy",
            ],
          ],
        },
        "Roles": Array [
          Object {
            "Ref": "authRoleName",
          },
          Object {
            "Ref": "unauthRoleName",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`cdk stack creation for place index service creates place index policy for Authorized users only access type 1`] = `
Object {
  "Outputs": Object {
    "Name": Object {
      "Value": Object {
        "Ref": "PlaceIndex",
      },
    },
  },
  "Parameters": Object {
    "authRoleName": Object {
      "Type": "String",
    },
    "dataProvider": Object {
      "Type": "String",
    },
    "dataSourceIntendedUse": Object {
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
    "indexName": Object {
      "Type": "String",
    },
    "pricingPlan": Object {
      "Type": "String",
    },
    "unauthRoleName": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "PlaceIndex": Object {
      "Properties": Object {
        "DataSource": Object {
          "Ref": "dataProvider",
        },
        "DataSourceConfiguration": Object {
          "IntendedUse": Object {
            "Ref": "dataSourceIntendedUse",
          },
        },
        "IndexName": Object {
          "Ref": "indexName",
        },
        "PricingPlan": Object {
          "Ref": "pricingPlan",
        },
      },
      "Type": "AWS::Location::PlaceIndex",
    },
    "PlaceIndexPolicy": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "geo:SearchPlaceIndexForPosition",
                "geo:SearchPlaceIndexForText",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PlaceIndex",
                  "IndexArn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Ref": "indexName",
              },
              "Policy",
            ],
          ],
        },
        "Roles": Array [
          Object {
            "Ref": "authRoleName",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
